# streamblocks-opencl

./: .gitignore  README.md  pom.xml
platform-opencl/: pom.xml
platform-opencl/src/main/java/streamblocks/opencl/backend/: OpenCLBackend.java
platform-opencl/src/main/java/streamblocks/opencl/backend/emitters/: Algebraic.java  Alias.java  CMakeLists.java  Callables.java  Channels.java  Controllers.java  Declarations.java  DefaultValues.java  Expressions.java  Free.java  Globals.java  Instances.java  Main.java  PatternMatching.java  Serialization.java  SizeOf.java  Statements.java  Tuples.java  TypesEvaluator.java  Variables.java
platform-opencl/src/main/java/streamblocks/opencl/backend/emitters/opencl/: OpenCLCallables.java  OpenCLDeclarations.java  OpenCLExpressions.java  OpenCLStatements.java  OpenCLTransition.java  OpenCLTypesEvaluator.java
platform-opencl/src/main/java/streamblocks/opencl/phase/: OpenCLBackendPhase.java
platform-opencl/src/main/java/streamblocks/opencl/platform/: OpenCL.java
platform-opencl/src/main/resources/lib/: CMakeLists.txt
platform-opencl/src/main/resources/lib/runtime/: CMakeLists.txt
platform-opencl/src/main/resources/lib/runtime/include/: Actor.h  CLI11.h  FIFO.h  Port.h  Scheduling.h  Translation.h  native_source.h  opencl_arguments.h  opencl_arguments.hpp  utils.h
platform-opencl/src/main/resources/lib/runtime/src/: Translation.cpp  native_source.cpp  opencl_arguments.cpp  utils.cpp
platform-opencl/src/main/resources/lib/sb-native/: CMakeLists.txt
platform-opencl/src/main/resources/lib/sb-native/include/: natives.h  sb_native_display.h  sb_native_display_sdl2.h  sb_native_framerate.h  sb_native_framerate_sdl.h  sb_native_source.h
platform-opencl/src/main/resources/lib/sb-native/src/: sb_native_display_sdl2.cpp  sb_native_framerate.cpp  sb_native_framerate_sdl.cpp  sb_native_no_display.cpp  sb_native_source.cpp
platform-opencl/src/main/resources/lib/sb-runtime/: CMakeLists.txt
platform-opencl/src/main/resources/lib/sb-runtime/include/: Actor.h  FIFO.h  Port.h  Scheduling.h  cl.h  cmdL_arguments.h  opencl_arguments.h  prelude.h  utils.h
platform-opencl/src/main/resources/lib/sb-runtime/src/: Translation.cpp  native_source.cpp  opencl_arguments.cpp  utils.cpp
